crates/shipper-core/src/runtime/policy/snapshots/shipper_core__runtime__policy__snapshot_tests__snapshot_balanced_readiness_disabled.snap
---
source: crates/shipper/src/runtime/policy/mod.rs
assertion_line: 567
expression: effects
---
PolicyEffects {
    run_dry_run: true,
    check_ownership: false,
    strict_ownership: false,
    readiness_enabled: false,
}
