crates/shipper-core/src/runtime/policy/snapshots/shipper_core__runtime__policy__snapshot_tests__snapshot_policy_kind_balanced.snap
---
source: crates/shipper-core/src/runtime/policy/mod.rs
expression: "PolicyKind::Balanced"
---
Balanced
