crates/shipper-core/src/runtime/policy/snapshots/shipper_core__runtime__policy__snapshot_tests__snapshot_policy_kind_fast.snap
---
source: crates/shipper/src/runtime/policy/mod.rs
assertion_line: 610
expression: "PolicyKind::Fast"
---
Fast
