crates/shipper-core/src/runtime/policy/snapshots/shipper_core__runtime__policy__snapshot_tests__snapshot_safe_no_verify.snap
---
source: crates/shipper/src/runtime/policy/mod.rs
assertion_line: 529
expression: effects
---
PolicyEffects {
    run_dry_run: false,
    check_ownership: true,
    strict_ownership: true,
    readiness_enabled: true,
}
