crates/shipper-core/src/runtime/policy/snapshots/shipper_core__runtime__policy__snapshot_tests__snapshot_safe_skip_ownership.snap
---
source: crates/shipper-core/src/runtime/policy/mod.rs
expression: effects
---
PolicyEffects {
    run_dry_run: true,
    check_ownership: false,
    strict_ownership: true,
    readiness_enabled: true,
}
